route endpoints, controllers, swagger doc working
